fixing layout of logo on small screens

--- a/stylesheets/sass/screen.scss
+++ b/stylesheets/sass/screen.scss
@@ -39,11 +39,13 @@ $width-large: 1200px;
 
 div {
   .logo {
-    margin: 20px;
-    width: 20%;
+    width: 60%;
+    margin: 0 20% 10%;
 
     @include responsive(medium-screens) {
       float: left;
+      margin: 20px;
+      width: 20%;
     }
 
     img {
